[WASM] Fix warning: cast from ‘char*’ to ‘JSC::Wasm::Type*’ increases required alignment of target type [-Wcast-align] https://bugs.webkit.org/show_bug.cgi?id=239698

Reviewed by Darin Adler.

There is a warning inside TypeDefinition on some platforms so this
patch fixes it.

* wasm/WasmTypeDefinition.h:
(JSC::Wasm::FunctionSignature::FunctionSignature):
(JSC::Wasm::FunctionSignature::storage):
(JSC::Wasm::FunctionSignature::storage const):
(JSC::Wasm::StructType::StructType):
(JSC::Wasm::StructType::storage):
(JSC::Wasm::StructType::storage const):
(JSC::Wasm::TypeDefinition::payload):

Canonical link: https://commits.webkit.org/250025@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293492 268f45cc-cd09-0410-ab3c-d52691b4dbfc